<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

	<PreferenceCategory android:title="@string/about_title" >
		<Preference
			android:key="about_version"
			android:title="Speedcoin Wallet Version" />
        <Preference
                android:key="about_credits_website"
                android:title="@string/about_credits_website_title" />
		<Preference
			android:key="about_author_twitter"
			android:summary="https://twitter.com/Speedcoin"
			android:title="@string/about_author_twitter_title" />
		<Preference
			android:key="about_author_facebook"
			android:summary="https://facebook.com/speedcoins"
			android:title="@string/about_author_facebook_title" />
		<Preference
			android:key="about_credits_reddit"
			android:title="@string/about_credits_reddit_title" />
        <Preference
                android:key="about_credits_forum"
                android:title="@string/about_credits_forum_title" />
		<Preference
			android:summary="© 2011-2014, Andreas Schildbach\n© 2014 Speedcoin Team"
			android:title="Copyright" />
		<Preference
			android:key="about_license"
			android:title="@string/about_license_title" />
		<Preference
			android:key="about_source"
			android:title="Source Code" />
		<Preference
			android:key="about_market_app"
			android:summary="@string/about_market_app_summary"
			android:title="@string/about_market_app_title" />
		<Preference
			android:key="about_market_publisher"
			android:title="@string/about_credits_market_publisher_title" />
		<Preference android:key="about_credits_bitcoinj" />
		<Preference
			android:key="about_credits_zxing"
			android:title="@string/about_credits_zxing_title" />
	</PreferenceCategory>

</PreferenceScreen>
